--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<a href="index.html"><div class="container pad cont2 fit flexcenter" style="width: 70%; height:auto">
 				<img src="foty/home.jpg" style="height: 32px">
 			</div></a>
+			<a href="https://github.com/ozmit/page" class="pad fit flexcenter"><img src="foty/github.png" style="width: 64px; height: 64px;"></a>
 		</div>
 
 		<div class="flexcenter bottom" id="fumo">
