--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="content-type" content="text/html" charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" type="image/x-icon" href="foty/favicon.png">
-	<title>Żmitruk - Index </title>
+	<title> Ozmit Page </title>
 
 </head>
 <body class="bigpadl" id="index">
